--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -28,7 +28,7 @@
             </form>
         </div>
 
-        <script src="../JAVASCRIPT/usuario.js"></script>
+        <script src="../scripts/login.js"></script>
 </body>
 
 </html>
