--- a/frontend/templates/materiales.html
+++ b/frontend/templates/materiales.html
@@ -66,6 +66,6 @@
             <!-- Los datos se insertarán aquí con JavaScript -->
         </tbody>
     </table>
-    <script src="../JAVASCRIPT/material.js"></script>
+    <script src="../scripts/material.js"></script>
 </body>
 </html>
