--- a/frontend/templates/materiales.html
+++ b/frontend/templates/materiales.html
@@ -27,39 +27,48 @@
     <form id="formulario">
         <label for="material">Nombre del material:</label>
         <input type="text" id="material" placeholder="Nombre del material" required>
-        
-        <label for="cantidad">Cantidad:</label>
-        <input type="number" id="cantidad" placeholder="Cantidad" required>
-        
-        <label for="precio">Precio:</label>
-        <input type="number" id="precio" placeholder="Precio" required>
-        
-        <label for="precio_venta">Precio de Venta:</label>
-        <input type="number" id="precio_venta" placeholder="Precio de Venta" required>
-        
-        <label for="estado">Estado:</label>
-        <input type="text" id="estado" placeholder="Estado" required>
-        
+    
         <label for="proveedor">Proveedor:</label>
         <select id="proveedor" required>
             <option value="">Seleccione un proveedor</option>
             <!-- Aquí se llenarán los proveedores dinámicamente -->
         </select>
-        
+
+        <input type="hidden" id="fecha_ingreso" value="">
+    
+        <label for="ganancia">Ganancia:</label>
+        <input type="number" id="ganancia" placeholder="Ganancia" required>
+    
+        <label for="cantidad">Cantidad:</label>
+        <input type="number" id="cantidad" placeholder="Cantidad" required>
+    
+        <label for="precio">Precio:</label>
+        <input type="number" id="precio" placeholder="Precio" required>
+    
+        <label for="precio_venta">Precio de Venta:</label>
+        <input type="number" id="precio_venta" placeholder="Precio de Venta" required>
+    
+        <label for="estado">Estado:</label>
+        <input type="text" id="estado" placeholder="Estado" required>
+    
         <button type="submit">Agregar Material</button>
     </form>
+    
 
     <h2>Productos</h2>
     <table>
         <thead>
             <tr>
+                <th>Codigo</th>
                 <th>Nombre</th>
-                <th>Cantidad</th>
-                <th>Precio</th>
-                <th>Precio Venta</th>
-                <th>Estado</th>
                 <th>Proveedor</th>
-                <th>Acción</th> <!-- Nueva columna para acciones -->
+                <th>Cantidad</th>
+                <th>Fecha de ingreso</th>
+                <th>Ganancia</th>
+                <th>Precio compra</th>
+                <th>Precio venta</th>
+                <th>Estado</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody id="materiales-body">
