--- a/frontend/assets/css/login.css
+++ b/frontend/assets/css/login.css
@@ -1,30 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto';
+}
+
 .container-fluid {
     height: 100vh;
 }
 
 .img-fondo {
     max-width: 100%;
-    height: 100vh; 
+    height: 100vh;
 }
 
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-align: center;
-}
 
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,22 +32,20 @@ body {
 }
 
 .login-box {
-    background-color: white;
     padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 350px;
     text-align: center;
+    
 }
 
 .logo {
-    width: 200px;
+    width: 80px;
     margin-bottom: 20px;
 }
 
 h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 30px;
+    margin-bottom: 30px;
 }
 
 .input-group {
@@ -66,6 +57,7 @@ h1 {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    
 }
 
 .input-group span {
@@ -76,34 +68,40 @@ h1 {
     width: 100%;
     padding: 10px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid white;
     border-radius: 5px;
+    border-color: #454546;
 }
 
 .login-button {
-    width: 100%;
+    width: 106%;
     padding: 10px;
     background-color: rgb(14, 14, 71);
     color: white;
     border: none;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
     margin-top: 10px;
+    
 }
 
 .login-button:hover {
     background-color: rgb(14, 14, 71);
+    
 }
 
+/* Enlace "¿Olvidaste tu contraseña?" */
 .forgot-password {
     display: block;
+    text-align: center;
     margin-top: 15px;
+    color: #007bff; /* Azul */
     font-size: 14px;
-    color: white;
     text-decoration: none;
 }
 
 .forgot-password:hover {
     text-decoration: underline;
 }
+
