--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -3,50 +3,79 @@
 * {
     margin: 0;
     padding: 0;
-	font-family: 'Roboto';
+    font-family: 'Roboto';
 }
 
 .inicio {
-    min-height: 100vh; 
-    background: 
+    display: flex;
+    justify-content: center;
+    /* Alineación horizontal */
+    align-items: center;
+    /* Alineación vertical */
+    height: 100vh;
+    /* Altura completa de la ventana */
+    margin: 0;
+    min-height: 100vh;
+    background:
         linear-gradient(rgba(12, 16, 241, 0.4), rgba(12, 16, 241, 0.4)),
         url('../img/bg-industria-corralon.jpg');
-    background-repeat: repeat; /* Permite que la imagen se repita */
-    background-size: 200% 200%; /* Aumenta el tamaño del fondo para un desplazamiento más suave */
-    background-blend-mode: overlay; /* Mezcla el gradiente y la imagen */
-    animation: desplazamientoVertical 30s linear infinite; /* Animación continua */
+    background-repeat: repeat;
+    /* Permite que la imagen se repita */
+    background-size: 200% 200%;
+    /* Aumenta el tamaño del fondo para un desplazamiento más suave */
+    background-blend-mode: overlay;
+    /* Mezcla el gradiente y la imagen */
+    animation: desplazamientoVertical 30s linear infinite;
+    /* Animación continua */
 }
 
 @keyframes desplazamientoVertical {
     0% {
-        background-position: 0% 0%; /* Comienza en la posición inicial */
+        background-position: 0% 0%;
+        /* Comienza en la posición inicial */
     }
+
     50% {
-        background-position: 0% 100%; /* Mueve el fondo hacia abajo */
+        background-position: 0% 100%;
+        /* Mueve el fondo hacia abajo */
     }
+
     100% {
-        background-position: 0% 0%; /* Regresa a la posición inicial para un bucle suave */
+        background-position: 0% 0%;
+        /* Regresa a la posición inicial para un bucle suave */
     }
 }
 
 
 .titulo {
-    color: white; /* Color del texto */
-    position: absolute; /* Asegura que el título pueda centrarse */
-    top: 50%; /* Centra verticalmente */
-    left: 100%; /* Comienza fuera de la pantalla a la derecha */
-    transform: translate(-50%, -50%); /* Ajusta el centro del título */
-    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
-    animation: aparecer 1s forwards; /* Llama a la animación */
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Sombra de texto para mejorar el contraste */
+    color: white;
+    /* Color del texto */
+    position: absolute;
+    /* Asegura que el título pueda centrarse */
+    top: 50%;
+    /* Centra verticalmente */
+    left: 100%;
+    /* Comienza fuera de la pantalla a la derecha */
+    transform: translate(-50%, -50%);
+    /* Ajusta el centro del título */
+    white-space: nowrap;
+    /* Evita que el texto se divida en varias líneas */
+    text-align: center;
+    animation: aparecer 1s forwards;
+    /* Llama a la animación */
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    /* Sombra de texto para mejorar el contraste */
     font-size: 3em;
 }
 
 @keyframes aparecer {
     0% {
-        left: 100%; /* Comienza fuera de la pantalla a la derecha */
+        left: 100%;
+        /* Comienza fuera de la pantalla a la derecha */
     }
+
     100% {
-        left: 50%; /* Termina en el centro horizontal */
+        left: 50%;
+        /* Termina en el centro horizontal */
     }
 }
