--- a/frontend/templates/inicio.html
+++ b/frontend/templates/inicio.html
@@ -11,28 +11,25 @@
 
 <body>
     <!-- Barra de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <div class="nav-item d-flex align-items-center">
-                        <img src="https://via.placeholder.com/40" class="rounded-circle me-2" alt="User" />
-                        <span class="me-3">Posada Javier</span>
-                        <span>Ignacio9876.ijjp@gmail.com</span>
-                    </div>
-                </div>
+    <nav class="navbar">
+        <div class="">
+            <a class="navbar-brand" href="#">
+                <img src="../assets/img/Abstract Colorful Technology Solutions Professional Logo.png"
+                    class="logo" alt="User" />
+            </a>
+        </div>
+        <div class="user-info">
+            <img src="../assets/img/usuario.webp" class="logo-usuario" alt="User" />
+            <div class="user-details">
+                <p class="user-name">Posada Javier</p>
+                <p class="user-email">Ignacio9876.jijp@gmail.com</p>
+                <button id="btn-salir">Cerrar sesion</button>
+
             </div>
         </div>
     </nav>
+
+
 
     <!-- Contenido principal -->
     <div class="container mt-5">
@@ -94,6 +91,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/inicio.js"></script>
+    <script src="../scripts/cerrarsesion.js"></script>
+
 
 </body>
 
