--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -22,7 +22,7 @@
                 <div class="input-group">
                     <label for="password">Contraseña <span>*</span></label>
                     <input type="password" id="contrasena" placeholder="Escribe tu contraseña" required>
-                </div>
+                </div class="input-group">
                 <button type="submit" class="login-button">INICIAR SESIÓN</button>
                 <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
             </form>
