--- a/frontend/assets/css/productos.css
+++ b/frontend/assets/css/productos.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-	font-family: 'Roboto';
+    font-family: 'Roboto';
 }
 
 
@@ -25,6 +25,10 @@
     padding: 10px 20px;
     align-items: center;
     background-color: #fff;
+    border-bottom: 2px solid #808080;
+    /* Gris medio */
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.2);
+    /* Sombra suave */
 }
 
 
@@ -35,19 +39,14 @@
     gap: 10px;
 }
 
-/* Imagen de usuario */
-.user-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+.user-info .icono-salir {
+    width: 25px;
+    height: 35px;
 }
 
 /* Contenedor de detalles del usuario */
 .user-details {
     display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    
 }
 
 /* Nombre de usuario */
@@ -55,7 +54,7 @@
     font-weight: bold;
     color: #333;
     margin: 0;
-    margin-right: 20px ;
+    margin-right: 20px;
 }
 
 /* Correo de usuario */
@@ -63,7 +62,7 @@
     font-size: 14px;
     color: #666;
     margin: 0;
-    margin-right: 20px ;
+    margin-right: 20px;
 }
 
 /* Botón de salir */
@@ -72,16 +71,18 @@
     padding: 5px 10px;
     font-size: 14px;
     color: white;
-    background-color: #d9534f; /* Color rojo */
+    background-color: #d9534f;
+    /* Color rojo */
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-right: 20px ;
+    margin-right: 20px;
 }
 
 #btn-salir:hover {
     background-color: #c9302c;
 }
+
 .table thead th {
     background-color: #000080;
     color: white;
@@ -115,10 +116,58 @@ td .badge-alta {
     text-decoration: underline;
 }
 
+
+
 .header-title {
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 20px;
+    background-color: #fff;
+    gap: 50px;
+    /* Espacio entre el h2 y el campo de búsqueda */
+}
+
+/* Estilo del título */
+.header-title h2 {
     font-weight: bold;
     color: #2c3e50;
+    font-size: 29px;
+    margin: 0;
 }
+
+/* Contenedor del campo de búsqueda */
+.search-container {
+    position: relative;
+    flex-grow: 1;
+    /* Hace que el campo de búsqueda ocupe el espacio sobrante */
+    max-width: 300px;
+    /* Controla el ancho máximo */
+}
+
+/* Estilo del input de búsqueda */
+.search-input {
+    width: 100%;
+    padding: 10px 35px 10px 15px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    outline: none;
+    background-color: #f2f2f2;
+}
+
+/* Estilo del ícono de búsqueda */
+.search-icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: #888;
+    cursor: pointer;
+}
+
 
 .col-auto h5 {
     font-size: 1rem;
