--- a/frontend/assets/css/rrhh.css
+++ b/frontend/assets/css/rrhh.css
@@ -5,6 +5,8 @@
     padding: 0;
     font-family: 'Roboto';
 }
+
+
 .logo-usuario {
     width: 48px;
     margin-right: 20px;
@@ -81,6 +83,12 @@
     background-color: #c9302c;
 }
 
+
+.header-title {
+    font-weight: bold;
+    color: #2c3e50;
+}
+
 .welcome-text {
     font-weight: bold;
     color: #003400;
@@ -101,20 +109,17 @@
     margin-top: 10px;
 }
 
-.bg-materiales {
-    background-color: #ff00bf;
-}
 
-.bg-rrhh {
+.bg-proveedores {
     background-color: #2e003e;
 }
 
-.bg-ventas {
+.bg-socios {
     background-color: #ffdc00;
 }
 
-.bg-administracion {
-    background-color: rgb(247, 68, 13);
+.bg-empleados {
+    background-color: orangered;
 }
 
 .hover-content {
@@ -132,7 +137,6 @@
     font-weight: bold;
     opacity: 0;
     transition: opacity 0.3s ease;
-    border-radius: 6px;
 }
 
 .col-md-3:hover .hover-content {
