--- a/frontend/templates/inicio.html
+++ b/frontend/templates/inicio.html
@@ -10,73 +10,85 @@
 </head>
 
 <body>
-    <!-- Barra de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <div class="nav-item d-flex align-items-center">
-                        <!-- Contenedor para mostrar nombre y apellido -->
-                        <span id="nombreApellido" class="me-3"></span>
+    <div class="container-fluid">
+        <!-- Barra de navegación -->
+        <nav class="navbar">
+            <div class="">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/img/Abstract Colorful Technology Solutions Professional Logo.png" class="logo"
+                        alt="User" />
+                </a>
+            </div>
+            <div class="user-info">
+                <div class="user-details">
+                    <div>
+                        <p class="user-name" id="nombreApellido"></p>
+                        <p class="user-email" id="emailUsuario"></p>
                     </div>
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir">
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <!-- Contenido principal -->
-    <div class="container mt-5">
-        <h3 class="welcome-text">Bienvenido: <strong id="bienvenidaNombre"></strong></h3>
+        <!-- Contenido principal -->
+        <div class="container mt-5">
+            <h3 class="welcome-text">Bienvenido: <strong id="bienvenidaNombre"></strong></h3>
 
-        <div class="row mt-4 justify-content-center">
-            <!-- Tarjeta MATERIALES-->
-            <div class="col-md-3">
-                <div id="materiales-card" class="card card-custom">
-                    <div class="card-body bg-materiales rounded-top p-5"></div>
-                    <div>
-                        <h5 class="card-title text-center p-4">MATERIALES</h5>
+            <div class="row mt-4 justify-content-center">
+                <!-- Tarjeta MATERIALES-->
+                <div class="col-md-3">
+                    <div id="materiales-card" class="card card-custom">
+                        <div class="card-body bg-materiales rounded-top p-5"></div>
+                        <div>
+                            <h5 class="card-title text-center p-4">MATERIALES</h5>
+                        </div>
+                        <div class="card-footer text-center">
+                            <p>Descripción</p>
+                        </div>
+                        <div class="hover-content">INGRESAR</div>
                     </div>
-                    <div class="card-footer text-center">
-                        <p>Descripción</p>
-                    </div>
-                    <div class="hover-content">INGRESAR</div>
                 </div>
-            </div>
 
-            <!-- Tarjeta RRHH -->
-            <div class="col-md-3">
-                <div id="rrhh-card" class="card card-custom">
-                    <div class="card-body bg-rrhh rounded-top p-5"></div>
-                    <div>
-                        <h5 class="card-title text-center p-4">RRHH</h5>
+                <!-- Tarjeta RRHH -->
+                <div class="col-md-3">
+                    <div id="rrhh-card" class="card card-custom">
+                        <div class="card-body bg-rrhh rounded-top p-5"></div>
+                        <div>
+                            <h5 class="card-title text-center p-4">RRHH</h5>
+                        </div>
+                        <div class="card-footer text-center">
+                            <p>Descripción</p>
+                        </div>
+                        <div class="hover-content">INGRESAR</div>
                     </div>
-                    <div class="card-footer text-center">
-                        <p>Descripción</p>
-                    </div>
-                    <div class="hover-content">INGRESAR</div>
                 </div>
-            </div>
 
-            <!-- Tarjeta ventas -->
-            <div class="col-md-3">
-                <div id="ventas-card" class="card card-custom">
-                    <div class="card-body bg-ventas rounded-top p-5"></div>
-                    <div>
-                        <h5 class="card-title text-center p-4">VENTAS</h5>
+                <!-- Tarjeta ventas -->
+                <div class="col-md-3">
+                    <div id="ventas-card" class="card card-custom">
+                        <div class="card-body bg-ventas rounded-top p-5"></div>
+                        <div>
+                            <h5 class="card-title text-center p-4">VENTAS</h5>
+                        </div>
+                        <div class="card-footer text-center">
+                            <p>Descripción</p>
+                        </div>
+                        <div class="hover-content">INGRESAR</div>
                     </div>
-                    <div class="card-footer text-center">
-                        <p>Descripción</p>
+                </div>
+
+                <!-- Tarjeta administracion -->
+                <div class="col-md-3">
+                    <div id="administracion-card" class="card card-custom">
+                        <div class="card-body bg-administracion rounded-top p-5"></div>
+                        <div>
+                            <h5 class="card-title text-center p-4">ADMINISTRACIÓN</h5>
+                        </div>
+                        <div class="card-footer text-center">
+                            <p>Descripción</p>
+                        </div>
+                        <div class="hover-content">INGRESAR</div>
                     </div>
-                    <div class="hover-content">INGRESAR</div>
                 </div>
             </div>
         </div>
@@ -85,8 +97,6 @@
     <!-- Scripts de JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/inicio.js"></script>
-    <script src="../scripts/cerrarsesion.js"></script>
-    <script src="../scripts/login.js"></script>
 </body>
 
 </html>
