--- a/frontend/templates/materiales.html
+++ b/frontend/templates/materiales.html
@@ -5,80 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiales</title>
-    <link rel="stylesheet" href="../assets/css/inicio.css">
+    <link rel="stylesheet" href="../assets/css/materiales.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Barra de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <div class="nav-item d-flex align-items-center">
-                        <span id="nombreApellido" class="me-3"></span>
-                        
+    <div class="container-fluid">
+        <!-- Barra de navegación -->
+        <nav class="navbar">
+            <div class="">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/img/Abstract Colorful Technology Solutions Professional Logo.png" class="logo"
+                        alt="User" />
+                </a>
+            </div>
+            <div class="user-info">
+                <div class="user-details">
+                    <div>
+                        <p class="user-name" id="nombreApellido"></p>
+                        <p class="user-email" id="emailUsuario"></p>
                     </div>
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir">
                 </div>
             </div>
+        </nav>
+
+        <div class="d-flex justify-content-between align-items-center my-4">
+            <h2 class="header-title">MATERIALES</h2>
         </div>
-    </nav>
 
-    <!-- Contenido principal -->
-    <div class="container mt-5">
-        <h3 class="welcome-text"> <strong id="bienvenidaNombre"></strong></h3>
+        <!-- Contenido principal -->
+        <div class="container mt-5">
+            <h3 class="welcome-text"> <strong id="bienvenidaNombre"></strong></h3>
 
-        <div class="row mt-4 justify-content-center">
-            <!-- Tarjeta MATERIALES-->
+            <div class="row mt-4 justify-content-center">
+                <!-- Tarjeta MATERIALES-->
 
 
-            <!-- Tarjeta productos -->
-            <div class="col-md-3">
-                <div id="productos-card" class="card card-custom">
-                    <div class="card-body bg-rrhh rounded-top p-5">
+                <!-- Tarjeta productos -->
+                <div class="col-md-3">
+                    <div id="productos-card" class="card card-custom">
+                        <div class="card-body bg-productos rounded-top p-5">
 
+                        </div>
+                        <div>
+                            <h5 class="card-title text-center p-4">PRODUCTOS</h5>
+                        </div>
+                        <div class="card-footer text-center">
+                            <p>Descripción</p>
+                        </div>
+                        <div class="hover-content">INGRESAR</div>
                     </div>
-                    <div>
-                        <h5 class="card-title text-center p-4">PRODUCTOS</h5>
-                    </div>
-                    <div class="card-footer text-center">
-                        <p>Descripción</p>
-                    </div>
-                    <div class="hover-content">INGRESAR</div>
                 </div>
-            </div>
 
 
 
 
-            <!-- Tarjeta stock -->
-            <div class="col-md-3">
-                <div id="stock-card" class="card card-custom">
-                    <div class="card-body bg-ventas rounded-top p-5">
+                <!-- Tarjeta stock -->
+                <div class="col-md-3">
+                    <div id="stock-card" class="card card-custom">
+                        <div class="card-body bg-stock rounded-top p-5">
 
+                        </div>
+                        <div>
+                            <h5 class="card-title text-center p-4">STOCK</h5>
+                        </div>
+                        <div class="card-footer text-center">
+                            <p>Descripción</p>
+                        </div>
+                        <div class="hover-content">INGRESAR</div>
                     </div>
-                    <div>
-                        <h5 class="card-title text-center p-4">STOCK</h5>
-                    </div>
-                    <div class="card-footer text-center">
-                        <p>Descripción</p>
-                    </div>
-                    <div class="hover-content">INGRESAR</div>
                 </div>
             </div>
         </div>
     </div>
 
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/materiales.js"></script>
