--- a/frontend/templates/stock.html
+++ b/frontend/templates/stock.html
@@ -3,34 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stock</title>
+    <link rel="stylesheet" href="../assets/css/stock.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <title>Stock</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <div class="nav-item d-flex align-items-center">
-                        <img src="https://via.placeholder.com/40" class="rounded-circle me-2" alt="User" />
-                        <!-- Contenedor para mostrar nombre y apellido -->
-                        <span id="nombreApellido" class="me-3"></span>
+    <div class="container-fluid">
+        <nav class="navbar">
+            <div class="">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/img/Abstract Colorful Technology Solutions Professional Logo.png" class="logo"
+                        alt="User" />
+                </a>
+            </div>
+            <div class="user-info">
+                <div class="user-details">
+                    <div>
+                        <p class="user-name" id="nombreApellido"></p>
+                        <p class="user-email" id="emailUsuario"></p>
                     </div>
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir">
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    
-    <script src="../scripts/login.js"></script>
-    <script src="../scripts/cerrarsesion.js"></script>
+        <div class="header-title">
+            <h2>stock</h2>
+            <div class="search-container">
+                <input type="text" class="search-input" placeholder="Buscar...">
+                <span class="search-icon">
+                    <!-- SVG de la lupa -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-search" viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.099zm-5.44 0a5.5 5.5 0 1 1 0-7.778 5.5 5.5 0 0 1 0 7.778z" />
+                    </svg>
+                </span>
+            </div>
+        </div>
+
+        <section class="stock d-flex flex-column">
+            <div class="table-responsive">
+                <table class="table table-bordered text-center mt-4">
+                    <thead>
+                        <tr>
+                            <th>Codigo</th>
+                            <th>Nombre</th>
+                            <th>Cantidad</th>
+                        </tr>
+                    </thead>
+                    <tbody id="stock-body">
+
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/stock.js"></script>
 </body>
 </html>
