--- a/frontend/templates/productos.html
+++ b/frontend/templates/productos.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/productos.css">
+    <link rel="stylesheet" href="../assets/css/estilosGenerales.css">
     <title>Lista de Productos</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
 
     <div class="container-fluid">
+
         <nav class="navbar">
             <div class="">
                 <a class="navbar-brand" href="#">
@@ -26,7 +27,7 @@
                         <p class="user-name" id="nombreApellido"></p>
                         <p class="user-email" id="emailUsuario"></p>
                     </div>
-                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir">
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir" id="iconoSalir">
                 </div>
             </div>
         </nav>
@@ -34,9 +35,8 @@
         <div class="header-title">
             <h2>PRODUCTOS</h2>
             <div class="search-container">
-                <input type="text" class="search-input" placeholder="Buscar...">
-                <span class="search-icon">
-                    <!-- SVG de la lupa -->
+                <input type="text" class="search-input" placeholder="Buscar..." id="buscarInput">
+                <span class="search-icon" id="iconoBuscar">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-search" viewBox="0 0 16 16">
                         <path
@@ -47,8 +47,7 @@
         </div>
 
         <section class="productos d-flex flex-column">
-            <button class="btn btn-agregar align-self-end my-4" data-bs-toggle="modal"
-                data-bs-target="#staticBackdrop">Agregar producto</button>
+                <button id="openModalBtn" class="btn btn-primary align-self-end">Agregar Producto</button>
             <div class="table-responsive">
                 <table class="table table-bordered text-center mt-4">
                     <thead>
@@ -72,64 +71,68 @@
             </div>
         </section>
 
-        <!-- MODAL -->
-        <div>
-            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="staticBackdropLabel">Agregar Producto</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form id="formulario">
-                                <div class="mb-3">
-                                    <label for="material" class="form-label">Nombre del Producto</label>
-                                    <input type="text" class="form-control" id="material" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="cantidad" class="form-label">Cantidad del Producto</label>
-                                    <input type="number" class="form-control" id="cantidad" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="proveedor" class="form-label">Proveedor</label>
-                                    <select class="form-select" id="proveedor" required>
-                                        <option value="">Seleccione un proveedor</option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="precio-compra" class="form-label">Precio Compra</label>
-                                    <input type="number" class="form-control" id="precio-compra" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="margen-ganancia" class="form-label">Margen de Ganancia</label>
-                                    <input type="number" class="form-control" id="margen-ganancia" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label class="form-label">Estado</label>
-                                    <div>
-                                        <input type="radio" id="alta" name="estado" value="alta" required>
-                                        <label for="alta">alta</label>
-                                    </div>
-                                    <div>
-                                        <input type="radio" id="baja" name="estado" value="baja">
-                                        <label for="baja">baja</label>
-                                    </div>
-                                </div>
-                                <div class="modal-footer justify-content-center">
-                                    <button type="submit" class="btn btn-primary">Guardar</button>
-                                </div>
-                            </form>
-                        </div>
+        
+
+        <!-- Modal -->
+        <div id="materialModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2 class="modal-title">CARGA DE MATERIAL</h2>
+
+                <form id="materialForm">
+                    <div class="form-group">
+                        <label for="nombre-producto">Nombre del producto:</label>
+                        <input type="text" id="material" placeholder="Escriba aquí..." required>
                     </div>
-                </div>
+
+                    <div class="form-group">
+                        <label for="cantidad">Cantidad:</label>
+                        <input type="number" id="cantidad" placeholder="Digite la identificación" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="proveedor">Proveedores:</label>
+                        <select id="proveedor" placeholder="Elija un proveedor" required>
+                            <option value=""></option>
+                        </select>
+                    </div>
+                    
+
+                    <div class="form-group">
+                        <label for="precio-compra">Precio Compra:</label>
+                        <input type="number" id="precio" placeholder="$" required>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="precio-venta">Precio de venta:</label>
+                        <input type="number" id="precio_venta" placeholder="$" required>
+                    </div>
+
+                    
+                    <div class="form-group">
+                        <label for="margen-ganancia">Margen de ganancia:</label>
+                        <input type="number" id="ganancia" placeholder="$" required>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="observaciones">Observaciones:</label>
+                        <textarea id="observaciones" placeholder="Escriba las observaciones..."></textarea>
+                    </div>
+
+                    <button type="submit" class="btn-guardar">GUARDAR</button>
+                </form>
             </div>
         </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-        <script src="../scripts/productos.js"></script>
+
+
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/productos.js"></script>
+    <script src="../scripts/cerrarsesion.js"></script>
 
 </body>
 
