--- a/frontend/assets/css/estilosGenerales.css
+++ b/frontend/assets/css/estilosGenerales.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 * {
     margin: 0;
     padding: 0;
     font-family: 'Roboto';
 }
+
 
 .logo-usuario {
     width: 48px;
@@ -25,11 +25,8 @@
     align-items: center;
     background-color: #fff;
     border-bottom: 2px solid #808080;
-    /* Gris medio */
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.2);
-    /* Sombra suave */
 }
-
 
 /* Estilos para el contenedor de usuario */
 .user-info {
@@ -37,26 +34,21 @@
     align-items: center;
     gap: 10px;
 }
-
 .user-info .icono-salir {
     width: 25px;
     height: 35px;
 }
-
-/* Contenedor de detalles del usuario */
 .user-details {
     display: flex;
 }
 
-/* Nombre de usuario */
+/* Nombre y correo de usuario */
 .user-name {
     font-weight: bold;
     color: #333;
     margin: 0;
     margin-right: 20px;
 }
-
-/* Correo de usuario */
 .user-email {
     font-size: 14px;
     color: #666;
@@ -77,65 +69,6 @@
     cursor: pointer;
     margin-right: 20px;
 }
-
 #btn-salir:hover {
     background-color: #c9302c;
-}
-
-.welcome-text {
-    font-weight: bold;
-    color: #003400;
-    margin-bottom: 130px;
-}
-
-.card-custom {
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.card-custom:hover {
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.6);
-}
-
-.card-title {
-    margin-top: 10px;
-}
-
-.bg-materiales {
-    background-color: #ff00bf;
-}
-
-.bg-rrhh {
-    background-color: #2e003e;
-}
-
-.bg-ventas {
-    background-color: #ffdc00;
-}
-
-.bg-administracion {
-    background-color: rgb(247, 68, 13);
-}
-
-.hover-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    border-radius: 6px;
-}
-
-.col-md-3:hover .hover-content {
-    opacity: 0.9;
 }
