--- a/frontend/assets/css/stock.css
+++ b/frontend/assets/css/stock.css
@@ -1,46 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-	font-family: 'Roboto';
-}
-
-
-.logo-usuario {
-    width: 48px;
-    margin-right: 20px;
-}
-
-.logo {
-    width: 48px;
-    margin-left: 20px;
-}
-
-
-/* Estilos para el navbar */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    align-items: center;
-    background-color: #fff;
-    border-bottom: 2px solid #808080; /* Gris medio */
-    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.2); /* Sombra suave */
-}
-
-/* Estilos para el contenedor de usuario */
-.user-info {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.user-info .icono-salir {
-    width: 25px;
-    height: 35px;
-}
-
 
 .header-title {
 
@@ -119,4 +76,5 @@
     color: white;
     font-weight: bold;
     text-transform: uppercase;
+    padding-left: 10px;
 }
