--- a/frontend/templates/inicio.html
+++ b/frontend/templates/inicio.html
@@ -25,7 +25,7 @@
                         <p class="user-name" id="nombreApellido"></p>
                         <p class="user-email" id="emailUsuario"></p>
                     </div>
-                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir">
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir" id="iconoSalir">
                 </div>
             </div>
         </nav>
@@ -97,6 +97,7 @@
     <!-- Scripts de JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/inicio.js"></script>
+    <script src="../scripts/cerrarsesion.js"></script>
 </body>
 
 </html>
