--- a/frontend/templates/rrhh.html
+++ b/frontend/templates/rrhh.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RECURSOS HUMANOS</title>
     <link rel="stylesheet" href="../assets/css/rrhh.css">
+    <link rel="stylesheet" href="../assets/css/estilosGenerales.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -25,7 +26,7 @@
                         <p class="user-name" id="nombreApellido"></p>
                         <p class="user-email" id="emailUsuario"></p>
                     </div>
-                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir">
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir" id="iconoSalir">
                 </div>
             </div>
         </nav>
@@ -101,6 +102,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/rrhh.js"></script>
+    <script src="../scripts/cerrarsesion.js"></script>
 
 </body>
 
