--- a/frontend/templates/stock.html
+++ b/frontend/templates/stock.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/stock.css">
+    <link rel="stylesheet" href="../assets/css/estilosGenerales.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <title>Stock</title>
 </head>
@@ -22,13 +23,13 @@
                         <p class="user-name" id="nombreApellido"></p>
                         <p class="user-email" id="emailUsuario"></p>
                     </div>
-                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir">
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir" id="iconoSalir">
                 </div>
             </div>
         </nav>
 
         <div class="header-title">
-            <h2>stock</h2>
+            <h2>STOCK</h2>
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Buscar...">
                 <span class="search-icon">
@@ -65,5 +66,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/stock.js"></script>
+    <script src="../scripts/cerrarsesion.js"></script>
 </body>
 </html>
